--- a/code_examples/05AFRAMETexts/index.html
+++ b/code_examples/05AFRAMETexts/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<script src="https://aframe.io/releases/1.2.0/aframe.min.js">
+	<script src="https://aframe.io/releases/1.3.0/aframe.min.js">
 
 	</script>
-	<script src="https://raw.githack.com/AR-js-org/AR.js/3.3.0/aframe/build/aframe-ar.js">
+	<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js">
 
 	</script>
 </head>
@@ -29,7 +29,7 @@
      >
     
   
-		<a-marker preset="kanji" size: "0.8">
+		<a-marker preset="kanji" size="0.8">
       <!-- basic text : we manually offset the position  -->
       <a-text value="Hello, World!" side="double" position = "0 0 -1" rotation="270 0 0" color="blue" align="center" ></a-text>
      
