fix  and remove comment + bump lib versions

--- a/code_examples/GPS/index.html
+++ b/code_examples/GPS/index.html
@@ -33,18 +33,16 @@
     </a-entity>
     -->
 
-    47.204268, -1.5635
+
 
     <a-text value="Hello" look-at="[gps-camera]" scale="10 10 10" color="red"
-      gps-entity-place="latitude: 47.204268; longitude: --1.5635;"></a-text>
+      gps-entity-place="latitude: 47.204268; longitude: -1.5635;"></a-text>
 
 
     <a-box scale="1 1 1" color="green" gps-entity-place="latitude: 47.204268; longitude: -1.5635;"></a-box>
 
     <a-camera gps-camera="minDistance: 0; maxDistance: 10; gpsMinDistance: 0; accelerationToMove:1.0;"
       arjs-look-controls='smoothingFactor: 0.1'>
-
-
     </a-camera>
     <!--
     <script>
